--- a/web-scraping/chatpter1.ipynb
+++ b/web-scraping/chatpter1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "0aadc0c4",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<body>\n",
-      "<h1>An Interesting Title</h1>\n",
-      "<div>\n",
-      "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n",
-      "</div>\n",
-      "</body>\n"
+      "<div hidden=\"\"><!--$--><!--/$--></div>\n"
      ]
     }
    ],
    "source": [
     "from urllib.request import urlopen \n",
     "from bs4 import BeautifulSoup\n",
-    "html = urlopen('http://pythonscraping.com/pages/page1.html') \n",
+    "import lxml\n",
+    "import lxml.html\n",
+    "html = urlopen('https://tailwindcss.com/') \n",
     "bs = BeautifulSoup(html.read(), 'html.parser') \n",
-    "print(bs.body)\n",
+    "print(bs.div)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "30ba9da4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen \n",
+    "from urllib.error import HTTPError, URLError \n",
+    "def getTitle(url):\n",
+    "    try: \n",
+    "        html = urlopen(url) \n",
+    "        try:\n",
+    "            bs = BeautifulSoup(html,'html.parser')\n",
+    "            title = bs.body.h1\n",
+    "        except AttributeError as e:\n",
+    "            return None\n",
+    "        return title\n",
+    "    except HTTPError as e: \n",
+    "        return None\n",
+    "    except URLError as e:\n",
+    "        return None\n",
+    "    # return null, break, or do some other \"Plan B\" \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb42c77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h1 class=\"px-2 text-4xl tracking-tighter text-balance max-lg:font-medium max-sm:px-4 sm:text-5xl lg:text-6xl xl:text-8xl\">Rapidly build modern websites without ever leaving your HTML.</h1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = getTitle('https://tailwindcss.com/')\n",
+    "if title == None:\n",
+    "    print('Title could not be found')\n",
+    "else:\n",
+    "    print(title)"
    ]
   }
  ],
