--- a/web-scraping/chatpter1.ipynb
+++ b/web-scraping/chatpter1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2cb42c77",
    "metadata": {},
    "outputs": [
@@ -61,16 +61,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<h1 class=\"px-2 text-4xl tracking-tighter text-balance max-lg:font-medium max-sm:px-4 sm:text-5xl lg:text-6xl xl:text-8xl\">Rapidly build modern websites without ever leaving your HTML.</h1>\n"
+      "<h1 class=\"font-sans babybear:pb-3 font-regular leading-regular text-display-lg text-smoke-70 babybear:text-display-md babybear:text-center\" data-test-id=\"hero__headline\">\n",
+      "          Welcome to your professional community\n",
+      "        </h1>\n"
      ]
     }
    ],
    "source": [
-    "title = getTitle('https://tailwindcss.com/')\n",
+    "title = getTitle('https://linkedin.com/')\n",
     "if title == None:\n",
     "    print('Title could not be found')\n",
     "else:\n",
     "    print(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d352216b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anna\n",
+      "Pavlovna Scherer\n",
+      "Empress Marya\n",
+      "Fedorovna\n",
+      "Prince Vasili Kuragin\n",
+      "Anna Pavlovna\n",
+      "St. Petersburg\n",
+      "the prince\n",
+      "Anna Pavlovna\n",
+      "Anna Pavlovna\n",
+      "the prince\n",
+      "the prince\n",
+      "the prince\n",
+      "Prince Vasili\n",
+      "Anna Pavlovna\n",
+      "Anna Pavlovna\n",
+      "the prince\n",
+      "Wintzingerode\n",
+      "King of Prussia\n",
+      "le Vicomte de Mortemart\n",
+      "Montmorencys\n",
+      "Rohans\n",
+      "Abbe Morio\n",
+      "the Emperor\n",
+      "the prince\n",
+      "Prince Vasili\n",
+      "Dowager Empress Marya Fedorovna\n",
+      "the baron\n",
+      "Anna Pavlovna\n",
+      "the Empress\n",
+      "the Empress\n",
+      "Anna Pavlovna's\n",
+      "Her Majesty\n",
+      "Baron\n",
+      "Funke\n",
+      "The prince\n",
+      "Anna\n",
+      "Pavlovna\n",
+      "the Empress\n",
+      "The prince\n",
+      "Anatole\n",
+      "the prince\n",
+      "The prince\n",
+      "Anna\n",
+      "Pavlovna\n",
+      "Anna Pavlovna\n"
+     ]
+    }
+   ],
+   "source": [
+    "content = urlopen('http://www.pythonscraping.com/pages/warandpeace.html')\n",
+    "bs = BeautifulSoup(content,'html.parser')\n",
+    "#  bs.find_all(tagName, tagAttributes)\n",
+    "nameList = bs.find_all('span', {'class':'green'}) \n",
+    "for name in nameList:\n",
+    "    # separate the content from the tags\n",
+    "    print(name.get_text())"
    ]
   }
  ],
